--- a/app/globals.css
+++ b/app/globals.css
@@ -1,8 +1,11 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --bleu_mar : rgb(7 13 60);
+  --ora : rgb(214, 114, 0);
+  --oraHover: #ff9115;
+  --gris: #EFEFEF;
+  --white:#ffffff;
 }
 
 @theme inline {
@@ -22,5 +25,27 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-roboto);
+}
+ul li{
+    list-style-type: none;
+}
+a{
+    text-decoration: none;
+}
+button{
+    padding: 0.5rem 1.5rem;
+    border: 1px solid transparent;
+    margin: 0 15px;
+    background-color: rgb(214, 114, 0);
+    border-radius: 3px;
+    transition: all 0.2s ease-in-out;
+    cursor: pointer;
+    color: white;
+    font-size: 15px;
+}
+button:hover{
+    background-color: var(--ora);
+    color: white;
+    border:1px solid transparent;
 }
